@@ -1,3 +1,3 @@
-EBUILD cds-meta-11.6.ebuild 1663 RMD160 3d737a058529eaf92b9902673f66f99642547284 SHA1 81b7a8e914cf65b6ff3e23225ab13d08c6a8c10a SHA256 76803cfcfd21f97f041f66454ad34aef766bd64c964330f519e6c74205c05cc2
-MISC ChangeLog 2127 RMD160 3a8ef16cfc9cd73ee92acb218e63e2e975ca9793 SHA1 876985c88f27491b326ca3e69fafb917d429722f SHA256 12d3b3b6077f935e1b481dc5e668481a92d65e18c9056df844b5a88dfdefd55f
+EBUILD cds-meta-11.6-r1.ebuild 1674 RMD160 46d77ff68a5acc09fb70690be8c38134975d6e9d SHA1 a432affb1102155167c43395592a8819b7f8908d SHA256 110576be6f122be76600947e489155819248d4797c1e62f91e2b756b288e1919
+MISC ChangeLog 2305 RMD160 8a873b391d03c9b0e5639893f2f4548a6aabdb67 SHA1 6d14a2681824a2de10ca7ea7282f8bee53ee1ef2 SHA256 f01d145b09737153d0602ebe2099d9dcfbe23c36b31673d81ebe5fef3f6d2661
 MISC metadata.xml 260 RMD160 6945f0c9b210fe3068c6e5a6f7d5071cf9043369 SHA1 49f5ce48babea34bb39ff3f0d9d7c3adf9665da2 SHA256 74bbb85f1ec54eab72a905a78ffd5ac51bc7c3f64e9731418aa68f773d2bfba8
