@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cl-tools-meta-11.6-r3 (03 Jun 2011)
+
+  03 Jun 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  -cl-tools-meta-11.6-r2.ebuild, +cl-tools-meta-11.6-r3.ebuild:
+  Add calculate_noldap flag
+
 *cl-tools-meta-11.6 (18 May 2011)
 
   18 May 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
