@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cds-meta-11.6-r1 (03 Jun 2011)
+
+  03 Jun 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  -cds-meta-11.6.ebuild, +cds-meta-11.6-r1.ebuild:
+  Add calculate_noldap flag
+
 *cds-meta-11.6 (18 May 2011)
 
   18 May 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
